<resources>
    <string name="app_name">Plant Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_delete">Delete Plant</string>
    <string name="action_delete_really">Confirm Delete Plant</string>
    <string name="action_rename">Rename Plant</string>
    <string name="action_change_start_date">Change Plant Date</string>
    <string name="action_change_flower_date">Change Flower Date</string>
</resources>
